--- a/ch02/build.gradle
+++ b/ch02/build.gradle
@@ -20,8 +20,8 @@ jar {
     baseName = 'demo'
     version = '0.0.1-SNAPSHOT'
 }
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     maven { url "http://repo.spring.io/milestone" }
@@ -33,6 +33,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile("org.springframework.boot:spring-boot-starter-security")
     compile("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
