--- a/ch07/readinglist-java/src/main/resources/application.yml
+++ b/ch07/readinglist-java/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 error:
   whitelabel:
     enabled: false
@@ -21,3 +22,5 @@ management:
   health:
     mongo:
       enabled: true
+server:
+  port: 7898
